# tidal-streamline

./: .claude-frontend-agent.md  .gitignore  CANVA_DEVELOPER_SETUP.md  CANVA_TEMPLATE_AUDIT.md  CSV_EXPORT_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  PDF_TEMPLATE_INTEGRATION_GUIDE.md  README.md  TEMPLATE_VARIABLE_MAPPING.md
backend/: .env.example  .gitignore  PINECONE_INTEGRATION_README.md  PINECONE_POPULATION_README.md  SYSTEM_IMPROVEMENT_PLAN.md  add_missing_roles.py  canva_test_full_135_variables.csv  canva_test_key_variables.csv  demo_semantic_matching.py  fix_failed_scans.py  generate_test_csv_for_canva.py  main.py  manage_pinecone_data.py  pinecone-helper.sh  populate_pinecone_historical.py  requirements.txt  reset_and_demo.py  start.py  test_api_csv_export.py  test_csv_export.py  test_direct_search.py  test_embeddings_simple.py  test_pinecone_integration.py  test_pinecone_simple.py  test_real_semantic_search.py  test_report_generation.py
backend/app/: __init__.py
database/: schema.sql
frontend/: check-positioning.js  debug-layout.js  final-test.js  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  test-and-create-scan.js  test-layout-simple.js  test-layout.js  vite.config.ts
pdf-extraction-server/: README.md  pyproject.toml
pdf-extraction-server/src/pdf_extraction/: pdf_extractor.py  server.py
scripts/: complete_candidates.json  extract_all_candidates.py  extract_candidate_pdf.py  extracted_candidates.json  populate_all_candidates.py  populate_candidate_data.py  raw_pdf_text.txt  setup_env_and_populate.sh
(+82 files in other folders)
